--- a/gemStore/css/style.css
+++ b/gemStore/css/style.css
@@ -1,6 +1,16 @@
 body {
 	background-color: rgba(0,240,90,40.3);
 }
+
 .product {
 	width:180px;
+}
+
+.listPreview {
+	padding: 5px;
+}
+
+.listPreview li {
+	list-style: none;
+	display: inline;
 }
