--- a/gemStore/css/style.css
+++ b/gemStore/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .product {
-	width:180px;
+	width:250px;
 }
 
 .listPreview {
@@ -18,4 +18,13 @@ body {
 
 .listPreview li img:hover {
 	transform: scale(1.1);
+}
+
+.reviews {
+	padding: 5px;
+	border: 1px solid #333;
+}
+
+.reviews .col-md-4 {
+	
 }
